syntax = "proto3";

package proto;

option go_package = "go.mocker.com/src/users/proto";

message RegisterRequest {
  string email    = 1;
  string password = 2;
}

message LoginRequest {
  string email    = 1;
  string password = 2;
}

message UserResponse {
  string uuid     = 1;
  string email    = 2;
}

message LoginResponse {
  string token    = 1;
  UserResponse user = 2;
}

service AuthService {
  rpc Register(RegisterRequest) returns (UserResponse);
  rpc Login(LoginRequest)    returns (LoginResponse);
}

